# tcc4tcl

./: Makefile.in  configure.ac  headers.awk  patch-headers.sh  pkgIndex.tcl.in  pkgIndex.tcl.tmpl.in  tcc.tcl  tcc4critcl.tcl  tcc4tcl.c  tcc4tcl.tcl  tcltcc.c  test  test.tcl
.fossil-settings/: ignore-glob
aclocal/: dlsym.m4  shobj.m4  tcl.m4  versionscript.m4
